fix: GankIo-Desktop.c: stack not switching problem
We just cannot switch the stack in btnsInfoTitle_clicked_cb by
calling gtk_builder_get_object again.

Switching task is now processed by comboBoxTextSortedDataType.

Signed-off-by: Junde Yhi <lmy441900@gmail.com>

--- a/frmMain.glade
+++ b/frmMain.glade
@@ -612,6 +612,7 @@ Author: Junde Yhi
                                       <item translatable="yes">Front End</item>
                                       <item translatable="yes">Extend Resources</item>
                                     </items>
+                                    <signal name="changed" handler="comboBoxTextSortedDataType_changed_cb" object="stackDailySorted" swapped="no"/>
                                   </object>
                                   <packing>
                                     <property name="expand">True</property>
