--- a/frmMain.glade
+++ b/frmMain.glade
@@ -110,7 +110,7 @@ Author: Junde Yhi
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="label_xalign">0</property>
-                                    <property name="shadow_type">none</property>
+                                    <property name="shadow_type">in</property>
                                     <child>
                                       <object class="GtkAlignment">
                                         <property name="visible">True</property>
@@ -189,7 +189,7 @@ Author: Junde Yhi
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="label_xalign">0</property>
-                                    <property name="shadow_type">none</property>
+                                    <property name="shadow_type">in</property>
                                     <child>
                                       <object class="GtkAlignment">
                                         <property name="visible">True</property>
